namespace Clac.Core.Enums;

public enum OperatorSymbol
{
    Add,
    Subtract,
    Multiply,
    Divide
}