namespace Clac.UI.Enums;

public enum KeyType
{
    Number,
    Operator,
    Function,
    Command,
    Enter
}