@startuml Clac Class Diagram

!define CORE_COLOR #E1F5FF
!define UI_COLOR #FFF4E1
!define ENUM_COLOR #E8F5E9

package "Clac.Core" CORE_COLOR {
    
    abstract class Token {
        {static} +CreateNumber(double): Token
        {static} +CreateOperator(OperatorSymbol): Token
        {static} +CreateCommand(string): Token
    }
    
    class Token.NumberToken {
        +Value: double
    }
    
    class Token.OperatorToken {
        +Symbol: OperatorSymbol
    }
    
    class Token.CommandToken {
        +Command: string
    }
    
    class RpnStack {
        -_stack: List<double>
        +ToArray(): double[]
        +Peek(): Result<double>
        +Push(double): void
        +Pop(): Result<double>
        +Clear(): void
        +Swap(): Result<double>
        +Sum(): Result<double>
        +Sqrt(): Result<double>
        +Pow(): Result<double>
        +Reciprocal(): Result<double>
        +Count: int
    }
    
    class RpnParser {
        -ValidCommands: string[]
        {static} +Parse(string): Result<List<Token>>
        -ValidateInput(string[]): Result<string[]>
    }
    
    class RpnEvaluator {
        {static} +Evaluate(double, double, OperatorSymbol): Result<double>
    }
    
    class RpnProcessor {
        -_stack: RpnStack
        -_commandHandlers: Dictionary<string, Func<Result<double>?>>
        +Stack: RpnStack
        +Process(List<Token>): Result<double>
        -ProcessCommand(string): Result<double>?
        -ProcessOperator(Token.OperatorToken): Result<double>
        -HandleClear(): Result<double>?
        -HandlePop(): Result<double>?
        -HandleSwap(): Result<double>?
        -HandleSum(): Result<double>?
        -HandleSqrt(): Result<double>?
        -HandlePow(): Result<double>?
        -HandleReciprocal(): Result<double>?
        -CloneStack(): RpnStack
    }
    
    class Operator {
        {static} +GetOperatorSymbol(string): Result<OperatorSymbol>
        {static} +IsValidOperator(string): bool
    }
    
    enum OperatorSymbol ENUM_COLOR {
        Add
        Subtract
        Multiply
        Divide
    }
    
    Token <|-- Token.NumberToken
    Token <|-- Token.OperatorToken
    Token <|-- Token.CommandToken
    
    RpnParser ..> Token : creates
    RpnParser ..> Operator : uses
    RpnParser ..> OperatorSymbol : uses
    
    RpnProcessor --> RpnStack : contains
    RpnProcessor ..> Token : processes
    RpnProcessor ..> RpnEvaluator : uses
    
    RpnEvaluator ..> OperatorSymbol : uses
    
    Operator ..> OperatorSymbol : returns
}

package "Clac.UI" UI_COLOR {
    
    class CalculatorViewModel {
        -_currentInput: string
        -_errorMessage: string?
        -_processor: RpnProcessor
        -_errors: Dictionary<string, List<string>>
        -_showScrollBar: bool
        +DisplayItems: ObservableCollection<StackLineItem>
        +StackDisplay: string[]
        +CurrentInput: string
        +HasError: bool
        +ErrorMessage: string
        +ShowScrollBar: bool
        +WindowHeight: double
        +DisplayHeight: double
        +HasErrors: bool
        +AppendToInput(string): void
        +DeleteFromInput(): void
        +Enter(): void
        +GetErrors(string?): IEnumerable
        -InitializeDisplayItems(): void
        -UpdateDisplayItems(): void
        -AddError(string, string): void
        -ClearErrors(string): void
        -OnErrorsChanged(string): void
        -OnPropertyChanged(string?): void
    }
    
    class KeyboardKey {
        +Label: string
        +Value: string
        +Type: KeyType
        +ColumnSpan: int
    }
    
    class StackLineItem {
        +LineNumber: string
        +FormattedValue: string
    }
    
    class UISettings {
        +WindowHeight: int
        +WindowWidth: int
        +DisplayLines: int
        +LineHeight: int
        +BorderThickness: int
    }
    
    class SettingsManager {
        {static} +UI: UISettings
    }
    
    class DisplayFormatter {
        {static} +FormatLineNumber(int, int): string
        {static} +GetMaxIntegerPartLength(string[]): int
        {static} +FormatValue(string, int): string
    }
    
    enum KeyType ENUM_COLOR {
        Number
        Operator
        Function
        Command
        Enter
    }
    
    class App {
        +Initialize(): void
        +OnFrameworkInitializationCompleted(): void
    }
    
    class MainWindow {
        +MainWindow(CalculatorViewModel): void
        +MainWindow(): void
    }
    
    class CalculatorView {
    }
    
    class DisplayView {
        -OnDataContextChanged(object?, EventArgs): void
        -OnViewModelPropertyChanged(object?, PropertyChangedEventArgs): void
        -UpdateScrollBarVisibility(CalculatorViewModel): void
        -OnDisplayItemsChanged(object?, NotifyCollectionChangedEventArgs): void
    }
    
    class InputView {
        -OnInputKeyDown(object?, KeyEventArgs): void
    }
    
    class KeyboardView {
        -OnDataContextChanged(object?, EventArgs): void
        -SetViewModelOnAllKeys(CalculatorViewModel): void
    }
    
    class KeyboardKeyView {
        +ViewModel: CalculatorViewModel?
        {static} +ViewModelProperty: StyledProperty<CalculatorViewModel?>
        -OnKeyButtonClick(object?, RoutedEventArgs): void
        -FindCalculatorViewModel(): CalculatorViewModel?
    }
    
    CalculatorViewModel --> RpnProcessor : uses
    CalculatorViewModel --> StackLineItem : contains
    CalculatorViewModel ..> RpnParser : uses
    CalculatorViewModel ..> DisplayFormatter : uses
    CalculatorViewModel ..> SettingsManager : uses
    
    KeyboardKey ..> KeyType : uses
    
    SettingsManager --> UISettings : provides
    
    App --> CalculatorViewModel : creates
    App --> MainWindow : creates
    
    MainWindow --> CalculatorViewModel : receives via constructor
    MainWindow --> CalculatorView : contains
    MainWindow ..> SettingsManager : uses
    
    CalculatorView --> DisplayView : contains
    CalculatorView --> InputView : contains
    CalculatorView --> KeyboardView : contains
    
    KeyboardView --> KeyboardKeyView : contains
    KeyboardView ..> CalculatorViewModel : sets ViewModel on children
    
    KeyboardKeyView --> CalculatorViewModel : receives via dependency property
    KeyboardKeyView ..> KeyboardKey : uses
    
    DisplayView ..> CalculatorViewModel : subscribes to PropertyChanged
}

CalculatorViewModel ..> "Clac.Core" : depends on

note right of Token
  Abstract record with nested
  record types for different
  token kinds
end note

note right of RpnProcessor
  Orchestrates RPN processing:
  - Parses tokens
  - Manages stack operations
  - Handles commands
  - Evaluates operators
end note

note right of CalculatorViewModel
  MVVM ViewModel:
  - Implements INotifyPropertyChanged
  - Implements INotifyDataErrorInfo
  - Bridges UI and Core logic
  - UI Framework Agnostic (no Avalonia types)
  - Exposes ShowScrollBar (bool) instead of ScrollBarVisibility
  - Computes WindowHeight and DisplayHeight
end note

note right of App
  Application Layer:
  - Creates ViewModel instance
  - Injects ViewModel into MainWindow
  - Controls ViewModel lifecycle
end note

note right of KeyboardKeyView
  View receives ViewModel via:
  - Dependency Property (preferred)
  - Fallback tree traversal (tests only)
end note

@enduml

